--- a/task-4.html
+++ b/task-4.html
@@ -19,7 +19,7 @@
         Password
         <input type="password" name="password" />
       </label>
-      <button type="submit">Login</button>
+      <button class='btn-task4' type="submit">Login</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
